src/CSS/projects.css
@font-face {
  font-family: profileFont;
  src: url("./font/vonique-64/Vonique\ 64.ttf");
}

@font-face {
  font-family: regularFont;
  src: url("./font/Montserrat/Montserrat-Light.ttf");
}

@media (min-width: 5px) {
  .projects-page-title {
    font-size: 40px;
    margin: 30px 0px 40px 0px;
  }
  .project-container {
    margin: 20px 0px;
  }
}

@media (min-width: 576px) {
  .projects-page-title {
    font-size: 40px;
    margin: 25px 0px;
  }
}

@media (min-width: 768px) {
  .projects-page-title {
    font-size: 40px;
    margin: 25px 0px;
  }
}

@media (min-width: 992px) {
  .projects-page-title {
    font-size: 40px;
    margin: 25px 0px;
  }
}

@media (min-width: 1200px) {
  .projects-page-title {
    font-size: 40px;
    margin: 30px 0px;
  }
}

.bodyContainer {
  border: 1px solid rgba(0, 0, 0, 0.726);
  background-color: rgba(0, 0, 0, 0.726);
  min-height: 100vh;
}

.name-row {
  font-size: 30px;
  margin-top: 25px;
}

.letter {
  font-family: profileFont;
  text-align: center;
  animation: nameLetter 1.5s forwards;
  animation-timing-function: linear;
  animation-iteration-count: 1;
}

@keyframes nameLetter {
  0% {
    color: rgba(255, 255, 255, 0);
  }

  10% {
    color: rgba(255, 255, 255, 0);
  }

  100% {
    color: white;
  }
}

.projects-page-title {
  color: white;
  font-family: regularFont;
  text-decoration: underline;
  text-underline-offset: 17px;
  text-decoration-thickness: from-font;
  /* margin-bottom: 20px; */
}

.project-container {
  display: flex;
  flex-direction: column;
  width: 400px;
}

.project-title {
  color: white;
  margin: 10px auto;
  font-size: 20px;
  cursor: default;
  font-family: regularFont;
}

.project-link {
  margin: auto;
  color: white;
}

.project-link:hover {
  color: white;
  text-decoration: none;
}

.project-image {
  max-width: 250px;
  margin: auto;
  box-shadow: 7px 3px 15px rgb(0, 0, 0, 0.4);
}

.project-description {
  color: white;
  max-width: 100%;
  margin: 7px auto 0px auto;
  cursor: default;
}

.certificates {
  color: white;
  margin-bottom: 60px;
}

.cert-title {
  font-weight: 200;
  margin-bottom: 10px;
  color: rgb(172, 172, 172);
}

.year {
  font-weight: 100;
}

.cert-desc {
  color: rgb(255, 255, 255);
  font-weight: 500;
  font-size: 17px;
}

.cert-material {
  font-weight: 100;
  font-size: large;
}

.home-link {
  position: fixed;
  bottom: 0px;
  left: -0.5vw;
  width: 101vw;
  background-color: black;
  padding-top: 15px;
}

.home-button {
  font-family: regularFont;
  color: white;
  text-decoration: none;
}

.home-button:hover {
  color: white;
  text-decoration: none;
}

